force-app/main/default/objects/DocumentChecklist__c/DocumentChecklist__c.object-meta.xml
<CustomObject>
    <label>Document Checklist</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>