force-app/main/default/objects/DocumentChecklist__c/fields/ApplicationDocument__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Document</label>
    <referenceTo>ApplicationDocument__c</referenceTo>
    <relationshipLabel>Document Checklists</relationshipLabel>
    <relationshipName>DocumentChecklists</relationshipName>
    <type>Lookup</type>
</CustomField>