force-app/main/default/objects/DocumentChecklist__c/fields/DateReceived__c.field-meta.xml
<CustomField>
    <fullName>DateReceived__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>