force-app/main/default/objects/DocumentChecklist__c/fields/TECH_DMIdentifier__c.field-meta.xml
<CustomField>
    <fullName>TECH_DMIdentifier__c</fullName>
    <description>Field used to identify record updated via data migration. The identifier is MidtierContactId - ApplicationDocumentId</description>
    <label>TECH_DMIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>