force-app/main/default/objects/DocumentChecklist__c/fields/TECH_DocumentChecklistID__c.field-meta.xml
<CustomField>
    <fullName>TECH_DocumentChecklistID__c</fullName>
    <description>For data migration</description>
    <formula>Opportunity__r.MidTierOpportunityID__c + &quot;-&quot; + CASESAFEID( ApplicationDocument__r.Id)</formula>
    <label>Document Checklist ID</label>
    <type>Text</type>
</CustomField>